K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authority
spec:
  selector:
    app: authority
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
