K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - host: "authority.ms"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: authority
                port:
                  number: 8090
